# GetMetaDataDispenser

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  GetMetaDataDispenser.sln  readme.md
Host/: Host.csproj  Imports.cs  Program.cs
getmddisp/: CMakeLists.txt  getmddisp.cpp
